# stock-select

./: .env.example  .gitignore  AGENTS.md  DATA_SOURCE_COMPLIANCE.md  DESIGN.md  FRONTEND_REDESIGN_PLAN.md  NEXT_PHASE_LIVE_DATA_PLAN.md  NEXT_PHASE_REVIEW_EVIDENCE_PLAN.md  NEXT_WORK_HANDOFF_PLAN.md  ONE_POINT_ZERO_PRODUCTIZATION_PLAN.md  OPERATION_MANUAL.md  README.md  REVIEW_SYSTEM_DESIGN.md  SYSTEM_AUDIT_AND_GRAPHIFY_ROADMAP.md  pyproject.toml
docs/: announcement_monitor_plan.md  evolution_architecture_upgrade.md  stock_deep_review_complete_plan.md
scripts/: backfill_prices.py  smoke_test.py  test_announcement_pipeline.py
tests/: test_analyst_evaluator.py  test_analyst_expectations.py  test_analyst_reviews.py  test_announcement_monitor.py  test_api_enhanced.py  test_candidate_filters.py  test_canonical_prices.py  test_comprehensive_integration.py  test_core.py  test_custom_sector.py  test_data_health.py  test_data_ingestion.py  test_data_missing_marking.py  test_evidence_schema_contracts.py  test_evidence_sync.py  test_evidence_views.py  test_evolution_dry_run.py  test_factor_sync.py  test_full_integration.py  test_hypothetical_review.py  test_llm_config.py  test_llm_contracts.py  test_llm_review.py  test_market_overview.py  test_mode.py  test_next_day_plan.py  test_pdf_extractor.py  test_pipeline_integration.py  test_planner.py  test_preopen_future_function.py  test_psychology_review.py  test_review_evidence_integration.py  test_scheduler.py  test_sector_analysis.py  test_sentiment_cycle.py  test_sentiment_scoring.py  test_similar_cases.py  test_sprint1.py  (+2 more)
(+143 files in other folders)
